<resources>
    <string name="app_name">WorkPlaces</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="err_empty">Fields are required</string>
    <string name="err_user">Not valid user</string>
    <string name="login">Login</string>
    <string name="salaDePc">Salas de PC</string>
    <string name="mesaDeTrabajo">Mesa De Trabajo</string>
    <string name="salaPersonalizada">Sala Personalizada</string>
    <string name="parqueadero">Parqueadero</string>
    <string name="necesito">Necesito</string>
    <string name="salon">Salon</string>

    <string-array name="TiposDeLugar">
        <item>@string/salaDePc</item>
        <item>@string/mesaDeTrabajo</item>
        <item>@string/salaPersonalizada</item>
        <item>@string/parqueadero</item>
        <item>@string/salon</item>
    </string-array>
    <string name="title_activity_menu__wp">Menu_WP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pc_room">PC Room</string>
    <string name="menu_table_work">Table Work</string>
    <string name="menu_custom_room">Custom Room</string>
    <string name="menu_parking">Parking</string>
    <string name="menu_room">Room</string>
    <string name="menu_add_place">Add place</string>
    <string name="menu_send">Send</string>
    <string name="menu_title">Whatdo you need?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bloque">Bloque</string>
    <string name="todo">Todo</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="Utilisar">Utilisar este Lugar?</string>
    <string name="usar">USAR</string>
    <string name="Yatienesp1">Usted esta usando ahora:</string>
    <string name="en">en</string>
    <string name="deseaUsar">Desea usar este ahora?</string>
    <string name="yaUsandoEsta">Ya estas usando el Lugar: </string>

    <string name="title_activity_prueba345">prueba345</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="find_your_place">Find your place</string>
    <string name="search">Search</string>


    <string name="ya_ocupado">El lugar Seleccionado no esta disponible</string>
    <string name="ocupado">Ocupado</string>
    <string name="nuevo_lugar">Nuevo Lugar</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="piso">Piso</string>
    <string name="tipo_place">Tipo de lugar</string>
    <string name="agregar">Agregar</string>

    <string name="nombre_vacio">Nombre no puede ser Vacio</string>
    <string name="bloque_vacio">Bloque no puede ser Vacio</string>
    <string name="piso_vacio">Piso no puede ser Vacio</string>
    <string name="pisoNeg">El piso es incorrecto</string>

    <string name="create_new_user">Create New User</string>
    <string name="register">Register</string>
    <string name="err_register">Register failed</string>
    <string name="usando_actual">Estoy Usando:</string>
    <string name="desocupar">Desocupar</string>

    <string name="no_Res">Ningun Recurso</string>


</resources>
