<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/H_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/necesito"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/hm_bt_salasdepc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listPcRooms"
            android:text="@string/salaDePc" />

        <Button
            android:id="@+id/hm_bt_mesaTrabajo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listWorkTables"
            android:text="@string/mesaDeTrabajo" />

        <Button
            android:id="@+id/hm_bt_SalaPersonalizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listPersonalizedRooms"
            android:text="@string/salaPersonalizada" />

        <Button
            android:id="@+id/hm_bt_parqueadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listParking"
            android:text="@string/parqueadero" />

        <Button
            android:id="@+id/hm_bt_salon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listClassRooms"
            android:text="@string/salon" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>