<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_wp"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            app:srcCompat="@drawable/logo_workplaces_white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/TxtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textPostalAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#00bbe4" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/TxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorLink="#00bbe4" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/ButtonLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_button_white_rounded_mesa_de_trabajo_1"
            android:gravity="center"
            android:onClick="Login"
            android:text="@string/login"
            android:textColor="#747474" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_button_green_rounded_mesa_de_trabajo_1"
            android:onClick="Register"
            android:padding="0dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#b0e9ff" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>