<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_WP">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_menu__wp" />

    <LinearLayout
        android:id="@+id/cn_Actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="50dp"
        android:background="#DBFFFFFF"
        android:orientation="vertical"
        android:visibility="invisible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/hm_lb_UsandoActualmente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usando_actual"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="24sp"
                app:fontFamily="@font/open_sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/hmTxtActualdes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/hm_Desocupar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/ic_button_green_rounded_mesa_de_trabajo_1"
            android:onClick="desocupar"
            android:text="@string/desocupar"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>